# ak-xmonad

./: README.md  home.nix  myXmonad.cabal  overlay.nix  shell.nix  stack.yaml  xsession-safe
src/: Main.hs  MyXmonad.hs  Old-Common.hs  Old-Keys.hs
src/MyXmonad/: Config.hs  Util.hs
src/MyXmonad/Config/: Color.hs
src/extras/: KeyHelp.txt  KeyList.hs  KeysFull.hs  VolumeBar.hs  XMobarConf.hs  XMonadTheme.hs  myXmobars.nix  shell.nix  volumebar.nix
src/host/: .gitignore
src/scripts/: SpotInfo.hs  pulse-switch.sh  pulse-volume.sh  releasePad  spotinfo
src/theme/: default.nix  xmonadTheme.nix
