cabal-version:       2.4
name:                myXmonad
version:             0.1.0.0
license:             GPL-3.0-only
license-file:        LICENSE
author:              BadDecisionsAlex
maintainer:          Alex.Ameen.TX@gmail.com
homepage:            https://github.com/BadDecisionsAlex/nix-home.git

extra-source-files:  CHANGELOG.md, src/extras/KeyHelp.txt

library
  hs-source-dirs:      src
  exposed-modules:     MyXmonad
  other-modules:       MyXmonad.Util, MyXmonad.Config, MyXmonad.Config.Color
  build-depends:
      X11
    , base             ^>=4.12.0.0
    , containers
    , directory
    , lens
    , neat-interpolation
    , pretty-simple
    , prizm
    , text
    , xmobar
    , xmonad
    , xmonad
    , xmonad-contrib
    , xmonad-extras
    , xmonad-spotify
    , process
    , split

executable myXmonad
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       MyXmonad.Util, MyXmonad.Config, MyXmonad.Config.Color
  build-depends:
      X11
    , base             ^>=4.12.0.0
    , containers
    , directory
    , lens
    , neat-interpolation
    , pretty-simple
    , prizm
    , text
    , xmobar
    , xmonad
    , xmonad
    , xmonad-contrib
    , xmonad-extras
    , xmonad-spotify
    , process
    , split
  default-language:    Haskell2010

-- vim: set cc= :
